todo-app/manifests/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-backend-dep
  namespace: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-backend
  template:
    metadata:
      labels:
        app: todo-backend
    spec:
      containers:
        - name: todo-backend
          image: todo-backend:v1 # TODO:
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
---

apiVersion: v1
kind: Service
metadata:
  name: todo-backend-svc  # 1. This is the DNS name
  namespace: project
spec:
  selector:
    app: todo-backend
  ports:
    - port: 80            # 2. Exposed internally on port 80 (standard HTTP)
      targetPort: 3000    # 3. Maps to container port 3000
