todo-app/manifests/frontend.yaml
# frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-frontend-dep
  namespace: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-frontend
  template:
    metadata:
      labels:
        app: todo-frontend
    spec:
      containers:
        - name: todo-frontend
          image: todo-frontend:v1
          imagePullPolicy: Never
          ports:
            - containerPort: 3001
---

apiVersion: v1
kind: Service
metadata:
  name: todo-frontend-svc
spec:
  selector:
    app: todo-frontend
  ports:
    - port: 2345         # This matches your Ingress rule
      targetPort: 3001
