todo-app/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app-svc
spec:
  type: ClusterIP
  selector:
    app: todo-app # Ensure this matches the 'labels' in your Deployment
  ports:
    - port: 2345 # Internal cluster port
      protocol: TCP
      targetPort: 3000 # The port your app runs on inside the container
